--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3"
     }
 }
